app/assets/stylesheets/master.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */
@import "bootstrap";

h1, h2, h3, h4, h5, h6, .navbar {
  margin: 0;
}

body {
  background: image_url('memphis-mini.png');
  font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
}

.navbar {
  box-shadow: 0px 1px 3px #2a2a2a;
  color: rgb(3, 3, 3);
  font-family: "Helvetica Neue", Helvetica;
  font-weight: 200;
  background: #2a2a2a;
}

.btn {
  color: rgb(7, 7, 7);
  font-size: 26px;
  background: none;
  margin-bottom: 0px;
  border-radius: 0;
}

.nav-link{
  color: rgb(7, 7, 7);
}

.navbar-inverse a.navbar-brand {
  font-family: "Helvetica Neue", Helvetica;
  font-weight: 100;
  color: white;
}

.hero {
  background: image_url('hero.jpg') no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  height: 370px;
  box-shadow: 0px 3px 8px #2a2a2a;
}

.frosty {
  background: rgba(0, 0, 0, 0.5);
  color: white;
}

.frosty h1 {
  font-family: "Helvetica Neue", Helvetica;
  font-weight: 80;
  text-shadow: rgba(0, 0, 0, 0.95) 1px 1px;
}

.frosty h2 {
  font-family: "Helvetica Neue", Helvetica;
  font-weight: 100;
  text-shadow: rgba(0, 0, 0, 0.95) 1px 1px;
}

.feature {
  width: 100%;
  padding-left: 5%;
  padding-right: 5%;
}

.booyah-box {
  -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
  -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
  box-shadow: 1px 1px 2px 0 #d0d0d0;
  background: #fff;
  border: 1px solid #ccc;
  border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
  padding: 10px;
}

.booyah-box h2, .booyah-box h1 {
  margin: 10px;
}

.help-block {
  color: #ff3333;
  background-color: #FFEEEE;
  border-radius: 3px;
  padding: 2px 8px 2px 8px;
  margin: 10px;
}

.clr {
  clear: both;
}

.lesson {
  background-color: black;
  margin-top: 10px;
  height: 130px;
}

.section {
  border: 1px solid;
  border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
  padding: 20px;
}

.lesson a {
  color: white;
  font-family: "Helvetica Neue", Helvetica;
  font-weight: 100;
  font-size: 15px;
}

.lesson a b {
  font-weight: 100;
  font-size: 25px;
}

.custom-toggler .navbar-toggler-icon {
  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255,0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
}

